--- a/templates/user/edit_profile.html
+++ b/templates/user/edit_profile.html
@@ -100,7 +100,7 @@
         <p class="text-muted">{{ request.user.email }}&nbsp;&nbsp;<span><a href="{% url 'change_email_request' %}">修改邮箱</a></span></p>
         <hr>
         <p>密码</p>
-        <a href="{% url 'change_password' %}"><p>修改密码</p></a>
+        <p><a href="{% url 'change_password' %}">修改密码</a></p>
         <hr>
       </div>
 
