--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button">{{ request.user.username }}
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{% url 'user_home' request.user.id %}">个人资料</a></li>
+            <li><a href="{% url 'user_home' request.user.id %}">我的主页</a></li>
             <li><a href="{% url 'user_logout' %}">退出登录</a></li>
           </ul>
         </li>
