--- a/templates/user/user_follow_question.html
+++ b/templates/user/user_follow_question.html
@@ -2,20 +2,20 @@
 
 {% block user_content %}
 
-<h4>{% if user == request.user %}我的问题{% else %}{% if user.gender == 'M' %}他{% else %}她{% endif %}的问题{% endif %}</h4>
+<h4>{% if user == request.user %}我关注的问题{% else %}{% if user.gender == 'M' %}他{% else %}她{% endif %}关注的问题{% endif %}</h4>
 <hr>
 
-{% for question in user_questions_page.object_list %}
+{% for question in user_follow_questions_page.object_list %}
 <div class="trend-item">
   <a href="{% url 'question_detail' question.id %}"><h3>{{ question.title }}</h3></a>
   <p class="text-muted">{{ question.pub_time|date:'Y-m-d' }} &middot; {{ question.get_answer_nums }} 个回答 &middot; {{ question.get_follow_nums }} 个关注</p>
-  {% if user == request.user %}
+  <!-- {% if user == request.user %}
   <button type="button" class="btn btn-default"><span class="delete-question glyphicon glyphicon-trash"></span> 删除</button>
-  {% endif %}
+  {% endif %} -->
 </div>
 <hr>
 {% endfor %}
 
-{% include 'zhihu/paginator.html' with page=user_questions_page %}
+{% include 'zhihu/paginator.html' with page=user_follow_questions_page %}
 
 {% endblock %}
