--- a/templates/user/user_home.html
+++ b/templates/user/user_home.html
@@ -13,79 +13,164 @@
   <p class="text-muted">回答了问题<span class="right-info">{{ obj.pub_time|date:"Y年m月d日" }}</span></p>
   <h3><a href="{% url 'question_detail' obj.question_id %}">{{ obj.question.title }}</a></h3>
   <div class="media">
-    <a href="{% url 'user_home' obj.question.author_id %}" class="media-left"><img src="" alt="头像" class="media-object"></a>
+    <a href="{% url 'user_home' obj.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ obj.author.image }}" alt="头像" class="media-object"></a>
     <div class="media-body">
-      <p class="media-heading">{{ obj.author.nickname }}</p>
+      <h4 class="media-heading"><a href="{% url 'user_home' obj.author_id %}">{{ obj.author.nickname }}</a></h4>
+      <p class="text-muted">{{ obj.author.description|default_if_none:'' }}</p>
     </div>
   </div>
   <p class="text-muted">{{ obj.get_follow_nums }} 人赞同了该回答</p>
   <p class="answer-content"><a href="{% url 'answer_detail' obj.id %}">{{ obj.content|striptags|truncatechars:200 }}</a></p>
   <div class="answer-meta">
-    <a href="{% url 'answer_detail' obj.id %}"><button type="button" class="btn btn-primary btnvote-up btn-sm"><span class="glyphicon glyphicon-triangle-top"></span> {{ obj.get_follow_nums }}</button></a>
-    <a href="{% url 'answer_detail' obj.id %}"><button type="button" class="btn btn-default btnvote-down btn-sm"><span class="glyphicon glyphicon-triangle-bottom"></span></button></a>
+    <button type="button" class="btn btn-primary btnvote-up btn-sm" onclick="follow_answer(this, {{ obj.id }})"><span class="glyphicon glyphicon-triangle-top"></span> {{ obj.get_follow_nums }}</button>
+    <button type="button" class="btn btn-default btnvote-down btn-sm" onclick="unfollow_answer(this, {{ obj.id }})"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
     <a href="{% url 'answer_detail' obj.id %}"><button type="button" class="btn btn-default btn-sm">{{ obj.get_comment_nums }} 条评论</button></a>
     <!-- <a href="{% url 'answer_detail' obj.id %}"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-star"></span>收藏</button></a> -->
   </div>
 </div>
-<hr>
+
 <!-- 添加了问题 -->
 {% elif obj|object_class_name == 'Question' %}
 <div class="trend-item">
   <p class="text-muted">添加了问题<span class="right-info">{{ obj.pub_time|date:"Y年m月d日" }}</span></p>
   <h3><a href="{% url 'question_detail' obj.id %}">{{ obj.title }}</a></h3>
 </div>
-<hr>
+
 <!-- 赞同了回答 -->
 {% elif obj|object_class_name == 'UserFollowAnswer' %}
 <div class="trend-item">
   <p class="text-muted">赞同了回答<span class="right-info">{{ obj.add_time|date:"Y年m月d日" }}</span></p>
   <h3><a href="{% url 'question_detail' obj.answer.question_id %}">{{ obj.answer.question.title }}</a></h3>
+  {% if obj.answer.is_anonymous %}
   <div class="media">
-    <a href="{% url 'user_home' obj.answer.author_id %}" class="media-left"><img src="" alt="头像" class="media-object"></a>
+    <div class="media-left"><img width="24px" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
     <div class="media-body">
-      <p class="media-heading">{{ obj.answer.author.nickname }}</p>
+      <h4 class="media-heading text-muted">匿名回答</h4>
     </div>
   </div>
+  {% else %}
+  <div class="media">
+    <a href="{% url 'user_home' obj.answer.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ obj.answer.author.image }}" alt="头像" class="media-object"></a>
+    <div class="media-body">
+      <h4 class="media-heading"><a href="{% url 'user_home' obj.answer.author_id %}">{{ obj.answer.author.nickname }}</a></h4>
+      <p class="text-muted">{{ obj.author.description|default_if_none:'' }}</p>
+    </div>
+  </div>
+  {% endif %}
   <p class="text-muted">{{ obj.answer.get_follow_nums }} 人赞同了该回答</p>
   <p class="answer-content"><a href="{% url 'answer_detail' obj.answer_id %}">{{ obj.answer.content|striptags|truncatechars:200 }}</a></p>
   <div class="answer-meta">
-    <a href="{% url 'answer_detail' obj.answer_id %}"><button type="button" class="btn btn-primary btnvote-up btn-sm"><span class="glyphicon glyphicon-triangle-top"></span> {{ obj.answer.get_follow_nums }}</button></a>
-    <a href="{% url 'answer_detail' obj.answer_id %}"><button type="button" class="btn btn-default btnvote-down btn-sm"><span class="glyphicon glyphicon-triangle-bottom"></span></button></a>
+    <button type="button" class="btn btn-primary btnvote-up btn-sm" onclick="follow_answer(this, {{ obj.answer.id }})"><span class="glyphicon glyphicon-triangle-top"></span> {{ obj.answer.get_follow_nums }}</button>
+    <button type="button" class="btn btn-default btnvote-down btn-sm" onclick="unfollow_answer(this, {{ obj.answer.id }})"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
     <a href="{% url 'answer_detail' obj.answer_id %}"><button type="button" class="btn btn-default btn-sm">{{ obj.answer.get_comment_nums }} 条评论</button></a>
     <!-- <a href="{% url 'answer_detail' obj.answer_id %}"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-star"></span>收藏</button></a> -->
   </div>
 </div>
-<hr>
+
 <!-- 收藏了回答 -->
 {% elif obj|object_class_name == 'UserCollectAnswer' %}
 <div class="trend-item">
   <p class="text-muted">在 {{ obj.answer.question.get_topic_name }} 中收藏了回答<span class="right-info">{{ obj.add_time|date:"Y年m月d日" }}</span></p>
   <h3><a href="{% url 'question_detail' obj.answer.question_id %}">{{ obj.answer.question.title }}</a></h3>
+  {% if obj.answer.is_anonymous %}
   <div class="media">
-    <a href="{% url 'user_home' obj.answer.author_id %}" class="media-left"><img src="" alt="头像" class="media-object"></a>
+    <div class="media-left"><img width="24px" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
     <div class="media-body">
-      <p class="media-heading">{{ obj.answer.author.nickname }}</p>
+      <h4 class="media-heading text-muted">匿名回答</h4>
     </div>
   </div>
+  {% else %}
+  <div class="media">
+    <a href="{% url 'user_home' obj.answer.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ obj.answer.author.image }}" alt="头像" class="media-object"></a>
+    <div class="media-body">
+      <h4 class="media-heading"><a href="{% url 'user_home' obj.answer.author_id %}">{{ obj.answer.author.nickname }}</a></h4>
+      <p class="text-muted">{{ obj.author.description|default_if_none:'' }}</p>
+    </div>
+  </div>
+  {% endif %}
   <p class="text-muted">{{ obj.answer.get_follow_nums }} 人赞同了该回答</p>
   <p class="answer-content"><a href="{% url 'answer_detail' obj.answer_id %}">{{ obj.answer.content|striptags|truncatechars:200 }}</a></p>
   <div class="answer-meta">
-    <a href="{% url 'answer_detail' obj.answer_id %}"><button type="button" class="btn btn-primary btnvote-up btn-sm"><span class="glyphicon glyphicon-triangle-top"></span> {{ obj.answer.get_follow_nums }}</button></a>
-    <a href="{% url 'answer_detail' obj.answer_id %}"><button type="button" class="btn btn-default btnvote-down btn-sm"><span class="glyphicon glyphicon-triangle-bottom"></span></button></a>
+    <button type="button" class="btn btn-primary btnvote-up btn-sm" onclick="follow_answer(this, {{ obj.answer.id }})"><span class="glyphicon glyphicon-triangle-top"></span> {{ obj.answer.get_follow_nums }}</button>
+    <button type="button" class="btn btn-default btnvote-down btn-sm" onclick="unfollow_answer(this, {{ obj.answer.id }})"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
     <a href="{% url 'answer_detail' obj.answer_id %}"><button type="button" class="btn btn-default btn-sm">{{ obj.answer.get_comment_nums }} 条评论</button></a>
     <!-- <a href="{% url 'answer_detail' obj.answer_id %}"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-star"></span>收藏</button></a> -->
   </div>
 </div>
-<hr>
+
 <!-- 关注了问题 -->
 {% elif obj|object_class_name == 'UserFollowQuestion' %}
 <div class="trend-item">
   <p class="text-muted">关注了问题<span class="right-info">{{ obj.add_time|date:"Y年m月d日" }}</span></p>
   <h3><a href="{% url 'question_detail' obj.question_id %}">{{ obj.question.title }}</a></h3>
 </div>
-<hr>
+
 {% endif %}
 {% endfor %}
+
 {% include 'zhihu/paginator.html' with page=user_trend_sorted_page %}
 
+{% endblock %}
+
+{% block custom_js %}
+<script>
+  //点赞
+  function follow_answer (dom, answer_id) {
+    var old_path = location.pathname;
+    $.ajax({
+      type: 'GET',
+      async: true,
+      url: "{% url 'add_follow_answer' %}",
+      data: {'answer_id':answer_id},
+      cache: false,
+      success: function (data) {
+        if(data.status == 'success') {
+          if(data.reason == 'add') {
+            var nums = parseInt($(dom).text()) + 1;
+            $(dom).html('<span class="glyphicon glyphicon-triangle-top"></span> ' + nums);
+          }else if(data.reason == 'cancel') {
+            var nums = parseInt($(dom).text()) - 1;
+            $(dom).html('<span class="glyphicon glyphicon-triangle-top"></span> ' + nums);
+          }
+        }else{
+          location.href = "{% url 'user_login' %}" + '?next=' + old_path;
+        }
+      },
+      error: function (xhr, err_msg, error) {
+        alert('请求出错');
+      },
+    });
+  }
+
+  //取消点赞
+  function unfollow_answer (dom, answer_id) {
+    if (parseInt($(dom).prev().text()) == 0) {
+      return;
+    };
+    var old_path = location.pathname;
+    $.ajax({
+      type: 'GET',
+      async: true,
+      url: "{% url 'cancel_follow_answer' %}",
+      data: {'answer_id':answer_id},
+      cache: false,
+      success: function (data) {
+        if(data.status == 'success') {
+          if(data.reason == 'cancel') {
+            var nums = parseInt($(dom).prev().text()) - 1;
+            $(dom).prev().html('<span class="glyphicon glyphicon-triangle-top"></span> ' + nums);
+          }else {
+            return;
+          }
+        }else{
+          location.href = "{% url 'user_login' %}" + '?next=' + old_path;
+        }
+      },
+      error: function (xhr, err_msg, error) {
+        alert('请求出错');
+      },
+    });
+  }
+
+</script>
 {% endblock %}
