--- a/templates/user/user_question.html
+++ b/templates/user/user_question.html
@@ -7,13 +7,12 @@
 
 {% for question in user_questions_page.object_list %}
 <div class="trend-item">
-  <a href="{% url 'question_detail' question.id %}"><h3>{{ question.title }}</h3></a>
+  <h3><a href="{% url 'question_detail' question.id %}">{{ question.title }}</a></h3>
   <p class="text-muted">{{ question.pub_time|date:'Y-m-d' }} &middot; {{ question.get_answer_nums }} 个回答 &middot; {{ question.get_follow_nums }} 个关注</p>
-  {% if user == request.user %}
+  <!-- {% if user == request.user %}
   <button type="button" class="btn btn-default"><span class="delete-question glyphicon glyphicon-trash"></span> 删除</button>
-  {% endif %}
+  {% endif %} -->
 </div>
-<hr>
 {% endfor %}
 
 {% include 'zhihu/paginator.html' with page=user_questions_page %}
