--- a/templates/zhihu/answer_detail.html
+++ b/templates/zhihu/answer_detail.html
@@ -35,10 +35,10 @@
           </p>
           <p class="text-muted">编辑于 {{ answer.pub_time }}</p>
           <div class="answer-meta">
-            <button type="button" class="btn btn-primary btnvote-up"><span class="glyphicon glyphicon-triangle-top"></span> {{ answer.get_follow_nums }}</button>
-            <button type="button" class="btn btn-default btnvote-down"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
+            <button type="button" class="btn btn-primary btnvote-up" onclick="follow_answer(this, {{ answer.id }})"><span class="glyphicon glyphicon-triangle-top"></span> {{ answer.get_follow_nums }}</button>
+            <button type="button" class="btn btn-default btnvote-down" onclick="unfollow_answer(this, {{ answer.id }})"><span class="glyphicon glyphicon-triangle-bottom"></span></button>
             <a href="#comment-form"><button type="button" class="btn btn-default">{{ answer.get_comment_nums }} 条评论</button></a>
-            <button type="button" class="btn btn-default collect-answer"><span class="glyphicon glyphicon-star"></span>{% if has_collect_answer %}已收藏{% else %}收藏{% endif %}</button>        
+            <button type="button" class="btn btn-default" onclick="collect_answer(this, {{ answer.id }})"><span class="glyphicon glyphicon-star"></span> {% if has_collect_answer %}已收藏{% else %}收藏{% endif %}</button>        
           </div>
         </div>
       </div>
@@ -134,38 +134,9 @@
 <script>
   // js代码在DOM节点的前面先加载, 绑定document的ready事件就好了
   $(function () {
-    var old_path = window.location.pathname;
-    //点赞
-    function add_follow(url) {
-      $.ajax({
-        cache:false,
-        type:'GET',
-        url:url,
-        async:true,
-        success:function(data) {
-          if(data.status == 'fail') {
-            alert(data.message);
-          }else if (data.status == 'success') {
-            window.location.reload();
-          }else if (data.status == 'nothing') { 
-          }else {
-            window.location.href = "{% url 'user_login' %}" + '?next=' + old_path;
-          }
-        },
-      });
-    }
-    // 点赞
-    $('.btnvote-up').on('click', function() {
-      add_follow("{% url 'add_follow_answer' answer.id %}");
-    });
-    // 取消点赞
-    $('.btnvote-down').on('click', function() {
-      add_follow("{% url 'cancel_follow_answer' answer.id %}")
-    });
-
     // 回答评论
     $('#comment-submit').on('click', function() {
-      var old_href = window.location.href;
+      var old_path = location.pathname;
       $.ajax({
         cache:false,
         type:'POST',
@@ -173,31 +144,97 @@
         data:$('.comment-form').serialize(),
         async:true,
         success:function(data) {
-          if(data.status == 'fail') {
+          if(data.status == 'success') {
+            location.href=old_path;
+          }else if(data.status == 'fail') {
             alert(data.message);
-          }else if(data.status == 'success') {
-            //alert('已评论');
-            window.location.href=old_href;
           }else{
             window.location.href = "{% url 'user_login' %}" + '?next=' + old_path;
           }
         },
       });
     });
-
-    //收藏答案
-    $('.collect-answer').on('click', function() {
-      $.get("{% url 'collect_answer' answer.id %}", function(data) {
-        if(data.status == 'success') {
-          $('.collect-answer').html('<span class="glyphicon glyphicon-star"></span>'+data.message);
-        }else if(data.status == 'fail') {
-          alert(data.message);
-        }else {
-          window.location.href = "{% url 'user_login' %}" + '?next=' + old_path;
-        }
-      });
-    });
   });
+
+  //点赞
+  function follow_answer (dom, answer_id) {
+    var old_path = location.pathname;
+    $.ajax({
+      type: 'GET',
+      async: true,
+      url: "{% url 'add_follow_answer' %}",
+      data: {'answer_id':answer_id},
+      cache: false,
+      success: function (data) {
+        if(data.status == 'success') {
+          if(data.reason == 'add') {
+            var nums = parseInt($(dom).text()) + 1;
+            $(dom).html('<span class="glyphicon glyphicon-triangle-top"></span> ' + nums);
+          }else if(data.reason == 'cancel') {
+            var nums = parseInt($(dom).text()) - 1;
+            $(dom).html('<span class="glyphicon glyphicon-triangle-top"></span> ' + nums);
+          }
+        }else{
+          location.href = "{% url 'user_login' %}" + '?next=' + old_path;
+        }
+      },
+      error: function (xhr, err_msg, error) {
+        alert('请求出错');
+      },
+    });
+  }
+
+  //取消点赞
+  function unfollow_answer (dom, answer_id) {
+    if (parseInt($(dom).prev().text()) == 0) {
+      return;
+    };
+    var old_path = location.pathname;
+    $.ajax({
+      type: 'GET',
+      async: true,
+      url: "{% url 'cancel_follow_answer' %}",
+      data: {'answer_id':answer_id},
+      cache: false,
+      success: function (data) {
+        if(data.status == 'success') {
+          if(data.reason == 'cancel') {
+            var nums = parseInt($(dom).prev().text()) - 1;
+            $(dom).prev().html('<span class="glyphicon glyphicon-triangle-top"></span> ' + nums);
+          }else {
+            return;
+          }
+        }else{
+          location.href = "{% url 'user_login' %}" + '?next=' + old_path;
+        }
+      },
+      error: function (xhr, err_msg, error) {
+        alert('请求出错');
+      },
+    });
+  }
+
+  //收藏回答
+  function collect_answer (dom, answer_id) {
+    var old_path = location.pathname;
+    $.ajax({
+      type: 'GET',
+      async: true,
+      url: "{% url 'collect_answer' %}",
+      data: {'answer_id':answer_id},
+      cache: false,
+      success: function (data) {
+        if(data.status == 'success') {
+            $(dom).html('<span class="glyphicon glyphicon-star"></span> ' + data.message);
+        }else{
+          location.href = "{% url 'user_login' %}" + '?next=' + old_path;
+        }
+      },
+      error: function (xhr, err_msg, error) {
+        alert('请求出错');
+      },
+    });
+  }
 
 </script>
 
