--- a/templates/zhihu/question.html
+++ b/templates/zhihu/question.html
@@ -23,7 +23,7 @@
       </div>
       <p>{{ question.content }}</p>
       <div class="question-meta">
-        <button type="button" class="btn btn-primary follow-question">{% if has_follow_question %}已关注{% else %}关注问题{% endif %}</button>
+        <button type="button" class="btn btn-primary" onclick="follow_question(this, {{ question.id }})">{% if has_follow_question %}已关注{% else %}关注问题{% endif %}</button>
         <a href="{% url 'answer_question' question.id %}"><button type="button" class="btn btn-default">写回答</button></a>
         <span>{{ question.pub_time }}</span>
       </div>
@@ -42,16 +42,24 @@
 
 <script>
   //关注问题
-  $('.follow-question').on('click', function() {
-    var old_path = window.location.pathname;
-    $.get("{% url 'follow_question' question.id %}", function(data) {
-      if(data.status == 'success') {
-        $('.follow-question').text(data.message);
-      }else if(data.status == 'fail') {
-        alert(data.message);
-      }else {
-        window.location.href = "{% url 'user_login' %}" + '?next=' + old_path;
-      }  
+  function follow_question (dom, question_id) {
+    var old_path = location.pathname;
+    $.ajax({
+      type: 'GET',
+      async: true,
+      url: "{% url 'follow_question' %}",
+      data: {'question_id':question_id},
+      cache: false,
+      success: function (data) {
+        if(data.status == 'success') {
+            $(dom).text(data.message);
+        }else {
+          location.href = "{% url 'user_login' %}" + '?next=' + old_path;
+        }
+      },
+      error: function (xhr, err_msg, error) {
+        alert('请求出错');
+      },
     });
-  });
+  }
 </script>
